Fixati i collegamenti tra pagine

--- a/networking/esercizi_subnetting/binary.html
+++ b/networking/esercizi_subnetting/binary.html
@@ -59,7 +59,7 @@
 <p>There is also hexadecimal values. This is the same idea as binary, but in base 16, so a single digit goes from having a value of zero to fifteen.</p>
 <p><table  bgcolor='#EEEEEE' border='1' cellpadding='2' cellspacing='1'><tr><td>Hexadecimal digit</td><td>0</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>A</td><td>B</td><td>C</td><td>D</td></td><td>E</td><td>F</td></tr><td>Decimal Value</td><td>0</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td></tr></table></p>
 <p>Because IPv6 is displayed using hexadecimal digits, converting between hex and binary is what network engineers will need to know for the future. The computer will still be using binary, but things will be displayed in hex.</p>
-<p>A <a href="binary_calc.html">Binary Decimal Hexadecimal Calculator</a> can also come in handy.<p>
+<p>A <a href="calculator.html">Binary Decimal Hexadecimal Calculator</a> can also come in handy.<p>
 
 
 
