--- a/networking/esercizi_subnetting/calculator.html
+++ b/networking/esercizi_subnetting/calculator.html
@@ -54,7 +54,7 @@
 	<button onClick="clear_form();">Clear</button>
 </form>
 <p id='ans'></p>
-Using CIDR/VLSM this calculator allows you to quickly figure out how to most efficiently setup your network. If you are using IPv6 you can use our <a href='ipv6_subnetting.html'>IPv6 subnetting calculator</a> to efficiently setup those addresses.
+Using CIDR/VLSM this calculator allows you to quickly figure out how to most efficiently setup your network. If you are using IPv6 you can use our <a href='calculator.html'>IPv6 subnetting calculator</a> to efficiently setup those addresses.
 <h4>Variable Length Subnet Masking Explained</h4>
 <p>Variable length subnet masking (VLSM) is a more efficient way of subnetting a network. When you perform classful subnetting, all the subnets must use the same subnet mask, forcing them to each use the same number of hosts. This can lead to wasted IP space. </p>
 
@@ -117,7 +117,7 @@ subnets or
 <button onClick="subnet_slashes();">Calculate</button>
 <p id='facts'>
 This calculator can be used for IPv6 in the same way VLSM is used to plan an IPv4 network.<br>
-Remember, the <a href='ipv6_is_huge.html'>size</a> of IPv6 can be huge. This calculator can crash your browser if you attempt to have it calculate billions of subnets!<br>
+Remember, the <a href='teoria.html'>size</a> of IPv6 can be huge. This calculator can crash your browser if you attempt to have it calculate billions of subnets!<br>
 Because of this, only the first 999 subnets are displayed.
 </p>
 <p id='subnetted'> </p>
