--- a/networking/esercizi_subnetting/headers.html
+++ b/networking/esercizi_subnetting/headers.html
@@ -70,10 +70,10 @@
 <div id='6ans'></div>
 
 <p>For the correct order see: <a href='IPv4_to_IPv6_header.png'>IPv4 and IPv6 headers</a>
-<br>For more information see: <a href='ip_header.html'>IP header information</a></p>
+<br>For more information see: <a href='teoria.html'>IP header information</a></p>
 
 
-<small>Copyright 2019. All rights reserved. <a href='contact.html'>Contact</a></small>
+<small>Copyright 2019. All rights reserved</small>
 <script type="text/javascript" src="js/headers.js"></script>
 <script>
   function responsiveMenu() {
