--- a/networking/esercizi_subnetting/index.html
+++ b/networking/esercizi_subnetting/index.html
@@ -45,9 +45,8 @@
 		<p id='answer' style='display:none'></p>
 		<p id='solution' style='display:none'></p>
 		<span id='question_number' style='display:none'></span>
-<p>Thank you for visiting SubnettingPractice.com, the most extensive subnetting practice site on the Internet. We provide text based and image based subnetting questions which simulate the real world.</p>
-<p>If these questions seem too difficult, start out with our <a href="subnets.html">basic subnetting</a> questions. You may also want to look at out <a href='ipv6.html'>IPv6 questions</a></p>
-<p> Learning how to subnet is key to passing the <a href='ccna_salary.html'>CCNA</a>, understanding how the internet works and the basis for any <a href='why.html'>networking career</a>. Use this site along with a good CCNA <a href="https://amzn.to/2mWCxzl">book</a> to gain the knowledge you need to succeed.</p>
+<p>If these questions seem too difficult, start out with our <a href="index.html">basic subnetting</a> questions.</p>
+<p> Learning how to subnet is key to passing the CCNA, understanding how the internet works and the basis for any networking career. Use this site along with a good CCNA <a href="https://amzn.to/2mWCxzl">book</a> to gain the knowledge you need to succeed.</p>
 
 
 
@@ -75,7 +74,7 @@
 </div>
 <p><button onclick ="show_answerez();">Show Answers</button>  <button onclick ="next_questionez();">Next</button></p>
 <p>These are basic subnetting questions. You should be able to do these without any problems if you plan to work in networking or are studying for a certificate such as the CCNA.</p>
-<p>Once you have these down, try the more advanced <a href="index.html">questions</a>. If you need help, take a look at <a href="howto.html">our how to</a> and our <a href="cheatsheet.html">subnetting reference cheatsheet</a>.</p>
+<p>Once you have these down, try the more advanced <a href="index.html">questions</a>. If you need help, take a look at <a href="teoria.html">our how to</a> and our <a href="teoria.html">subnetting reference cheatsheet</a>.</p>
 
 
 
