--- a/networking/networking.html
+++ b/networking/networking.html
@@ -8,7 +8,7 @@
 <body>
 
   <h1>Seleziona un link qua sotto: </h1>
-  <p>Ciao!</p>
+  <a href='esercizi_subnetting/'>Esercizi Networking</a>
 
 </body>
 </html>
