--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Questo è il menu responsive-->
     <a href="#home" class="active">Home</a>
     <a href="cpp.html">C++</a>
-    <a href="networking/esercizi_subnetting/">Networking</a>
+    <a href="networking/">Networking</a>
     <a href="java.html">Java</a>
     <a href="files/">Files</a>
     <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
