Aggiunto codice per visualizzare il carattere speciale '_'
si spera

--- a/networking/esercizi_acl/access-list3.html
+++ b/networking/esercizi_acl/access-list3.html
@@ -7,7 +7,7 @@
 <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
 <meta name="DC:Creator" content="Jay Hanks" />
 <meta name="DC:Title" content="After receving malcious traffic from host 137.107.32.37 /23, you decide to block both it and any other host from the same network.  Here is the access list you create: access-list _1_  _2_ 137.107._3_  0.0.__4__ Drag the correct answer from the right column to its correct position on the left column (note, not all items are used)" />
-
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /> 
 
