--- a/networking/index.html
+++ b/networking/index.html
@@ -13,9 +13,9 @@
       <div class="topnav" id="myTopnav">
         <!--Questo è il menu responsive-->
 			<a href='index.html' class="active">Networking</a>
-    		<a href='Cisco/index.html'>Cisco teoria</a>
-			<a href='esercizi_subnetting/index.html'>Esercizi Subnetting</a>
-			<a href='esercizi_acl/index.html'>Esercizi ACL</a>
+    		<a href='Cisco/'>Cisco teoria</a>
+			<a href='esercizi_subnetting/'>Esercizi Subnetting</a>
+			<a href='esercizi_acl/'>Esercizi ACL</a>
 			
 			
 
