--- a/networking/Cisco/index.html
+++ b/networking/Cisco/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<title>Router&Cisco</title>
+   <title>Router&Cisco</title>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <frameset rows="0,*" cols="*" border=0>
@@ -12,7 +13,7 @@
   </frameset>
   <noframes>
   <body>
-  <p>La pagina corrente utilizza i frame. Questa caratteristica non è supportata 
+  <p>La pagina corrente utilizza i frame. Questa caratteristica non Ã¨ supportata 
     dal browser in uso.</p>
   </body>
   </noframes>
